Remediate audit_report_1_3: runtime jobs, admin session gating, upload hardening, prompt consistency, asset/perf updates

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -136,6 +136,6 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
     <script src="{{ url_for('static', filename='js/auth-utils.js') }}"></script>
     <script src="{{ url_for('static', filename='js/download-utils.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+    <script src="{{ url_for('static', filename=admin_js_asset or 'js/admin.js') }}"></script>
 </body>
 </html>
